--- a/apps/mix-cms/src/app/components/role-form/role-form.component.html
+++ b/apps/mix-cms/src/app/components/role-form/role-form.component.html
@@ -51,7 +51,7 @@
               </div>
 
               <div>
-                All Role's Back Office Portal Menu &nbsp;
+                All Role's Back Office Portal Menu
                 <mix-button type="outline"
                             [iconBtn]="true"
                             (click)="showDialog(addNewMenuItem)"
