--- a/apps/mix-cms/src/app/pages/portal/app-settings/app-settings.component.html
+++ b/apps/mix-cms/src/app/pages/portal/app-settings/app-settings.component.html
@@ -11,7 +11,7 @@
         <div class="flex justify-content-between items-center mb-4">
           <div class="text-xl text-bold">Local Settings</div>
 
-          <mix-button (click)="addNew()"><span class="material-symbols-outlined"> edit </span>&nbsp; Add
+          <mix-button (click)="addNew()"><span class="material-symbols-outlined"> edit </span> Add
           </mix-button>
         </div>
 
