--- a/apps/mix-cms/src/app/pages/portal/app-settings/config-form/config-form.component.html
+++ b/apps/mix-cms/src/app/pages/portal/app-settings/config-form/config-form.component.html
@@ -10,12 +10,12 @@
           <mix-button class="mr-auto"
                       type="outline"
                       (click)="location.back()"
-                      size="s"><span class="material-symbols-outlined"> west </span>&nbsp; Back
+                      size="s"><span class="material-symbols-outlined"> west </span> Back
           </mix-button>
           <mix-button class="ms-2"
                       (click)="onSubmit()"
                       size="s"><span class="material-symbols-outlined">
-              {{ mode === 'create' ? 'add' : 'save_as' }} </span>&nbsp; {{ mode === 'create' ? 'Create' : 'Save' }}
+              {{ mode === 'create' ? 'add' : 'save_as' }} </span> {{ mode === 'create' ? 'Create' : 'Save' }}
           </mix-button>
         </mix-sub-toolbar>
         <div class="data-detail-page__content">
