--- a/apps/mix-cms/src/app/pages/portal/discount/discount.component.html
+++ b/apps/mix-cms/src/app/pages/portal/discount/discount.component.html
@@ -9,7 +9,7 @@
                   [disabled]="!selectedPosts.length"
                   (click)="onBulkRemoveDiscount()"
                   size="s">
-        <span class="material-symbols-outlined"> delete </span>&nbsp;
+        <span class="material-symbols-outlined"> delete </span>
         {{ 'Remove discount' | transloco }}</mix-button>
 
       <mix-button class="mr-auto"
