--- a/apps/mix-cms/src/app/pages/portal/module/module-data-detail/module-data-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/module/module-data-detail/module-data-detail.component.html
@@ -8,12 +8,12 @@
       <mix-button class="mr-auto"
                   type="outline"
                   (click)="goBack()"
-                  size="s"><span class="material-symbols-outlined"> west </span>&nbsp; Back
+                  size="s"><span class="material-symbols-outlined"> west </span> Back
       </mix-button>
       <mix-button class="ms-2"
                   (click)="submitData()"
                   size="s"><span class="material-symbols-outlined">
-          {{ mode === 'create' ? 'add' : 'save_as' }} </span>&nbsp; {{ mode === 'create' ? 'Create' : 'Save' }}
+          {{ mode === 'create' ? 'add' : 'save_as' }} </span> {{ mode === 'create' ? 'Create' : 'Save' }}
       </mix-button>
     </mix-sub-toolbar>
 
