--- a/apps/mix-cms/src/app/pages/portal/module/module-data/module-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/module/module-data/module-data.component.html
@@ -4,7 +4,7 @@
                      [title]="'All ' + (module?.title || 'data')">
       <div class="toolbar-separator"></div>
       <mix-button (click)="createNew()"
-                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp; Add New
+                  size="s"><span class="material-symbols-outlined"> add </span> Add New
       </mix-button>
       <div class="toolbar-separator"></div>
     </mix-sub-toolbar>
