--- a/apps/mix-cms/src/app/pages/portal/order/order-detail/order-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/order/order-detail/order-detail.component.html
@@ -28,10 +28,10 @@
         <nav [(activeItemIndex)]="activeTabIndex"
              tuiTabs>
           <button tuiTab>
-            <span class="material-symbols-outlined"> feed </span>&nbsp; General
+            <span class="material-symbols-outlined"> feed </span> General
           </button>
           <button tuiTab>
-            <span class="material-symbols-outlined"> content_paste </span>&nbsp;
+            <span class="material-symbols-outlined"> content_paste </span>
             Shipping Process
           </button>
         </nav>
