--- a/apps/mix-cms/src/app/pages/portal/page/page-detail/page-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/page/page-detail/page-detail.component.html
@@ -28,20 +28,20 @@
              tuiTabs>
           <button tuiTab><span class="material-symbols-outlined">
               feed
-            </span>&nbsp; General</button>
+            </span> General</button>
           <button tuiTab><span class="material-symbols-outlined">
               content_paste
-            </span>&nbsp; Main Content</button>
+            </span> Main Content</button>
           <button tuiTab><span class="material-symbols-outlined">
               travel_explore
-            </span>&nbsp; SEO</button>
+            </span> SEO</button>
           <!-- <button tuiTab><span class="material-symbols-outlined">
               extension
-            </span>&nbsp; Modules</button>
+            </span> Modules</button>
           <button class="ml-auto"
                   tuiTab><span class="material-symbols-outlined">
               settings
-            </span>&nbsp; Template Setting</button> -->
+            </span> Template Setting</button> -->
         </nav>
       </div>
     </div>
