--- a/apps/mix-cms/src/app/pages/portal/post/post-detail/post-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/post/post-detail/post-detail.component.html
@@ -37,7 +37,7 @@
 
             <mix-button class="ml-auto"
                         (click)="submit()">
-              <span class="mix-icon"> save_as </span>&nbsp; Save
+              <span class="mix-icon"> save_as </span> Save
             </mix-button>
           </div>
 
@@ -75,39 +75,39 @@
         <nav [(activeItemIndex)]="activeTabIndex"
              tuiTabs>
           <button tuiTab>
-            <span class="material-symbols-outlined"> feed </span>&nbsp; General
+            <span class="material-symbols-outlined"> feed </span> General
           </button>
 
           <button tuiTab>
-            <span class="material-symbols-outlined"> content_paste </span>&nbsp;
+            <span class="material-symbols-outlined"> content_paste </span>
             Main content
           </button>
 
           <button (click)="showVariant = true"
                   tuiTab>
-            <span class="material-symbols-outlined"> dynamic_feed </span>&nbsp;
+            <span class="material-symbols-outlined"> dynamic_feed </span>
             Variants
           </button>
 
           <button (click)="showMetadata = true"
                   tuiTab>
-            <span class="material-symbols-outlined"> new_label </span>&nbsp;
+            <span class="material-symbols-outlined"> new_label </span>
             Metadata
           </button>
 
           <button (click)="showRelatedPost = true"
                   tuiTab>
-            <span class="material-symbols-outlined"> share </span>&nbsp; Related
+            <span class="material-symbols-outlined"> share </span> Related
             To
           </button>
 
           <button class="ml-auto"
                   tuiTab>
-            <span class="material-symbols-outlined"> travel_explore </span>&nbsp; SEO
+            <span class="material-symbols-outlined"> travel_explore </span> SEO
           </button>
 
           <button tuiTab>
-            <span class="material-symbols-outlined"> settings </span>&nbsp;
+            <span class="material-symbols-outlined"> settings </span>
             Setting
           </button>
         </nav>
