--- a/apps/mix-cms/src/app/pages/portal/promotion/promotion-detail/promotion-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/promotion/promotion-detail/promotion-detail.component.html
@@ -18,7 +18,7 @@
         <mix-button class="mr-auto"
                     type="outline"
                     (click)="goBack()"
-                    size="s"><span class="material-symbols-outlined"> west </span>&nbsp; Back
+                    size="s"><span class="material-symbols-outlined"> west </span> Back
         </mix-button>
 
         <mix-button class="ms-2"
@@ -35,7 +35,7 @@
         <nav [(activeItemIndex)]="activeTabIndex"
              tuiTabs>
           <button tuiTab>
-            <span class="material-symbols-outlined"> feed </span>&nbsp; General
+            <span class="material-symbols-outlined"> feed </span> General
           </button>
         </nav>
       </div>
