--- a/libs/mix-share/src/components/action-collapse/action-collapse.component.html
+++ b/libs/mix-share/src/components/action-collapse/action-collapse.component.html
@@ -7,7 +7,7 @@
                 [type]="$any(item.type || 'outline')"
                 (click)="onClick(item.key)"
                 size="s">
-      <span class="mix-icon"> {{ item.icon }} </span>&nbsp;
+      <span class="mix-icon"> {{ item.icon }} </span>
       {{ item.label }}
     </mix-button>
   </ng-container>
@@ -29,7 +29,7 @@
                     (click)="onClick(item.key)"
                     tuiOption>
               <span>
-                <span class="mix-icon"> {{ item.icon }} </span>&nbsp;
+                <span class="mix-icon"> {{ item.icon }} </span>
                 {{ item.label }}
               </span>
             </button>
