--- a/libs/mix-share/src/components/entity-form/entity-form.component.html
+++ b/libs/mix-share/src/components/entity-form/entity-form.component.html
@@ -60,10 +60,10 @@
       <nav [(activeItemIndex)]="activeTabIndex"
            tuiTabs>
         <button tuiTab>
-          <span class="material-symbols-outlined"> feed </span>&nbsp; General
+          <span class="material-symbols-outlined"> feed </span> General
         </button>
         <button tuiTab>
-          <span class="material-symbols-outlined"> settings </span>&nbsp;
+          <span class="material-symbols-outlined"> settings </span>
           Default Value
         </button>
       </nav>
