--- a/libs/mix-share/src/modules/database/components/database-select/database-select.component.html
+++ b/libs/mix-share/src/modules/database/components/database-select/database-select.component.html
@@ -6,7 +6,7 @@
                 class="database-select__add-btn"
                 [type]="'outline'"
                 (click)="createDb()">
-      <span class="mix-icon">add</span>&nbsp; New Table
+      <span class="mix-icon">add</span> New Table
     </mix-button>
 
     <mix-input class="database-select__search"
