--- a/libs/mix-share/src/modules/database/database-context/database-context.component.html
+++ b/libs/mix-share/src/modules/database/database-context/database-context.component.html
@@ -4,7 +4,7 @@
                      [title]="'All Db Context'">
       <div class="toolbar-separator"></div>
       <mix-button (click)="addContext()"
-                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp; New
+                  size="s"><span class="material-symbols-outlined"> add </span> New
         Context</mix-button>
       <div class="toolbar-separator"></div>
     </mix-sub-toolbar>
