--- a/libs/mix-share/src/modules/database/database-data/database-data.component.html
+++ b/libs/mix-share/src/modules/database/database-data/database-data.component.html
@@ -70,7 +70,7 @@
                       type="outline"
                       (click)="onPreviewData(vm.db)"
                       size="m">
-            <span class="mix-icon">code</span>&nbsp; API Document</mix-button>
+            <span class="mix-icon">code</span> API Document</mix-button>
         </div>
 
         <div class="mix-dbs-table__main-container">
@@ -115,7 +115,7 @@
 
         <div class="mix-dbs-table__footer">
           <div class="flex gap-2">
-            Total items: <strong>{{ vm.pageInfo.total || '--' }}</strong> &nbsp;
+            Total items: <strong>{{ vm.pageInfo.total || '--' }}</strong>
             Page size: <strong>{{ vm.pageInfo.pageSize || '0' }}</strong>
           </div>
 
