--- a/libs/mix-share/src/modules/database/database-detail/database-detail.component.html
+++ b/libs/mix-share/src/modules/database/database-detail/database-detail.component.html
@@ -29,7 +29,7 @@
                       type="secondary"
                       [size]="'s'"
                       (click)="goDatabaseData(data.systemName)">
-            View data source&nbsp;
+            View data source
             <span class="mix-icon"> arrow_right_alt </span>
           </mix-button>
 
@@ -47,19 +47,19 @@
           <nav [(activeItemIndex)]="activeTabIndex"
                tuiTabs>
             <button tuiTab>
-              <span class="mix-icon"> feed </span>&nbsp; General
+              <span class="mix-icon"> feed </span> General
             </button>
             <button tuiTab>
-              <span class="mix-icon"> settings </span>&nbsp; Columns
+              <span class="mix-icon"> settings </span> Columns
             </button>
             <button tuiTab>
-              <span class="mix-icon"> share </span>&nbsp; Relationships
+              <span class="mix-icon"> share </span> Relationships
             </button>
             <button tuiTab>
-              <span class="mix-icon"> key </span>&nbsp; Permissions
+              <span class="mix-icon"> key </span> Permissions
             </button>
             <button tuiTab>
-              <span class="mix-icon"> rule_settings </span>&nbsp; Migrations
+              <span class="mix-icon"> rule_settings </span> Migrations
             </button>
           </nav>
         </div>
