--- a/libs/mix-share/src/modules/database/databases/database.component.html
+++ b/libs/mix-share/src/modules/database/databases/database.component.html
@@ -5,7 +5,7 @@
       <div class="toolbar-separator"></div>
 
       <mix-button (click)="createDatabase()"
-                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp; New
+                  size="s"><span class="material-symbols-outlined"> add </span> New
         MixDb</mix-button>
 
       <div class="toolbar-separator"></div>
@@ -14,7 +14,7 @@
                   [disabled]="!selectedTable.length"
                   (click)="onDeleteTable()"
                   size="s">
-        <span class="material-symbols-outlined"> delete </span>&nbsp; Delete(s)
+        <span class="material-symbols-outlined"> delete </span> Delete(s)
       </mix-button>
     </mix-sub-toolbar>
 
