--- a/libs/mix-share/src/modules/task-manage/board/board.component.html
+++ b/libs/mix-share/src/modules/task-manage/board/board.component.html
@@ -4,7 +4,7 @@
     <mix-sub-toolbar [description]="'Work on'"
                      [title]="'Kanban Board'">
       <mix-button (click)="addTask()"
-                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp;
+                  size="s"><span class="material-symbols-outlined"> add </span>
         {{ 'New' | transloco }}</mix-button>
     </mix-sub-toolbar>
 
