--- a/libs/mix-share/src/modules/task-manage/components/task-date-display/task-date-display.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-date-display/task-date-display.component.html
@@ -4,6 +4,6 @@
     {{ task.fromDate | date : 'dd MMM yyyy' }}
   </span>
   <span *ngIf="task.dueDate">
-    &nbsp;- {{ task.dueDate | date : 'dd MMM yyyy' }}
+    - {{ task.dueDate | date : 'dd MMM yyyy' }}
   </span>
 </div>
