--- a/libs/mix-share/src/modules/task-manage/components/task-detail-modal/task-detail-modal.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-detail-modal/task-detail-modal.component.html
@@ -23,7 +23,7 @@
       <mix-button class="ml-auto"
                   [disabled]="disableSave()"
                   [loading]="(loadingState$ | async) === 'Loading'"
-                  (click)="saveTask()"><span class="mix-icon">save</span>&nbsp; Save & Close</mix-button>
+                  (click)="saveTask()"><span class="mix-icon">save</span> Save & Close</mix-button>
     </div>
   </div>
 
