--- a/libs/mix-ui/src/array-radio/array-radio.component.html
+++ b/libs/mix-ui/src/array-radio/array-radio.component.html
@@ -4,7 +4,7 @@
                      [item]="item"
                      size="l"
                      formControlName="choose">
-    {{ item }} &nbsp;-<a (click)="onRemove(item)"
+    {{ item }} -<a (click)="onRemove(item)"
        tuiLink>
       Remove</a>
   </tui-radio-labeled>
