--- a/libs/mix-ui/src/button/button.component.scss
+++ b/libs/mix-ui/src/button/button.component.scss
@@ -17,6 +17,50 @@ mix-button {
   }
 }
 
-[tuiButton][data-size='m'] {
-  --tui-padding: 1rem;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .button-base-styles {
+    @apply text-sm;
+    @apply px-3.5 py-2;
+    @apply text-center whitespace-nowrap;
+    @apply inline-flex justify-center items-center space-x-2;
+    @apply hover:brightness-[1.15];
+    @apply transition-all;
+    @apply focus:outline-none;
+    @apply cursor-pointer;
+    @apply outline-none;
+  }
+
+  .btn {
+    @apply button-base-styles rounded active:scale-[95%] active:brightness-90;
+  }
+
+  .btn.primary {
+    @apply text-white bg-primary focus:outline-none focus:ring-primary;
+  }
+
+  .btn.secondary {
+    @apply text-gray-900 focus:outline-none bg-white border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700;
+  }
+
+  .btn.danger {
+    @apply text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300;
+  }
+
+  .btn {
+    &.--disabled {
+      @apply opacity-50 cursor-not-allowed active:scale-100 hover:brightness-100;
+    }
+
+    &.--icon-btn {
+      @apply p-1.5;
+    }
+
+    &.--size-2xl {
+      @apply text-xl px-3 py-4;
+    }
+  }
 }
