--- a/libs/mix-ui/src/dynamic-filter/dynamic-filter.component.html
+++ b/libs/mix-ui/src/dynamic-filter/dynamic-filter.component.html
@@ -1,7 +1,7 @@
 <mix-button type="outline"
             [size]="size"
             (click)="open(modalTpl)">
-  <span class="mix-icon">filter_alt</span>&nbsp;
+  <span class="mix-icon">filter_alt</span>
   <span class="text-500">Filter(s)</span>
 
   <tui-badge *ngIf="validFilterCount"
