--- a/apps/mix-cms/src/app/pages/portal/module/module-detail/module-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/module/module-detail/module-detail.component.html
@@ -24,11 +24,11 @@
         <nav [(activeItemIndex)]="activeTabIndex"
              tuiTabs>
           <button tuiTab>
-            <span class="material-symbols-outlined"> feed </span>&nbsp; General
+            <span class="material-symbols-outlined"> feed </span> General
           </button>
           <button class="ml-auto"
                   tuiTab>
-            <span class="material-symbols-outlined"> settings </span>&nbsp;
+            <span class="material-symbols-outlined"> settings </span>
             Setting
           </button>
         </nav>
