--- a/apps/mix-cms/src/app/pages/portal/module/module.component.html
+++ b/apps/mix-cms/src/app/pages/portal/module/module.component.html
@@ -5,13 +5,13 @@
                      [title]="'All Modules'">
       <div class="toolbar-separator"></div>
       <mix-button (click)="addNew()"
-                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp;
+                  size="s"><span class="material-symbols-outlined"> add </span>
         Add</mix-button>
       <div class="toolbar-separator"></div>
       <mix-button type="danger"
                   [disabled]="!selectedPages.length"
                   size="s">
-        <span class="material-symbols-outlined"> delete </span>&nbsp;
+        <span class="material-symbols-outlined"> delete </span>
         Delete(s)</mix-button>
     </mix-sub-toolbar>
 
