--- a/apps/mix-cms/src/app/pages/portal/page/page.component.html
+++ b/apps/mix-cms/src/app/pages/portal/page/page.component.html
@@ -4,14 +4,14 @@
     <mix-sub-toolbar [description]="'LISTING'"
                      [title]="'All Pages'">
       <mix-button (click)="addNew()"
-                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp;
+                  size="s"><span class="material-symbols-outlined"> add </span>
         Add</mix-button>
       <div class="toolbar-separator"></div>
       <mix-button class="mr-1"
                   type="danger"
                   [disabled]="!selectedPages.length"
                   size="s">
-        <span class="material-symbols-outlined"> delete </span>&nbsp;
+        <span class="material-symbols-outlined"> delete </span>
         Delete</mix-button>
     </mix-sub-toolbar>
 
