--- a/apps/mix-cms/src/app/pages/portal/permissions/permissions.component.html
+++ b/apps/mix-cms/src/app/pages/portal/permissions/permissions.component.html
@@ -5,7 +5,7 @@
                      [description]="'LISTING'"
                      [title]="'All Permissions'">
       <div class="toolbar-separator"></div>
-      <mix-button size="s"><span class="material-symbols-outlined"> add </span>&nbsp;
+      <mix-button size="s"><span class="material-symbols-outlined"> add </span>
         Add</mix-button>
       <div class="toolbar-separator"></div>
     </mix-sub-toolbar>
