--- a/apps/mix-cms/src/app/pages/portal/promotion/promotion.component.html
+++ b/apps/mix-cms/src/app/pages/portal/promotion/promotion.component.html
@@ -5,7 +5,7 @@
                      [title]="'All Promotion' | transloco">
       <mix-button class="mr-auto"
                   (click)="addNew()"
-                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp;
+                  size="s"><span class="material-symbols-outlined"> add </span>
         Create</mix-button>
     </mix-sub-toolbar>
 
