--- a/apps/mix-cms/src/app/pages/portal/roles/roles.component.html
+++ b/apps/mix-cms/src/app/pages/portal/roles/roles.component.html
@@ -5,7 +5,7 @@
                      [description]="'LISTING'"
                      [title]="'All Roles'">
       <div class="toolbar-separator"></div>
-      <mix-button size="s"><span class="material-symbols-outlined"> add </span>&nbsp; Add
+      <mix-button size="s"><span class="material-symbols-outlined"> add </span> Add
         Role</mix-button>
       <div class="toolbar-separator"></div>
     </mix-sub-toolbar>
