--- a/libs/mix-share/src/components/dynamic-db-list/dynamic-db-list.component.html
+++ b/libs/mix-share/src/components/dynamic-db-list/dynamic-db-list.component.html
@@ -111,7 +111,7 @@
         <mix-button [loading]="savingVariant()"
                     (click)="saveData()">
           <span class="material-symbols-outlined"> keyboard_backspace </span>
-          &nbsp; Save & Back
+          Save & Back
         </mix-button>
 
         <mix-button class="ms-2"
