--- a/libs/mix-share/src/modules/task-manage/timeline/timeline.component.html
+++ b/libs/mix-share/src/modules/task-manage/timeline/timeline.component.html
@@ -3,7 +3,7 @@
   <div class="data-table-page__main-container">
     <mix-sub-toolbar [description]="'View'"
                      [title]="'Timeline'">
-      <mix-button size="s"><span class="material-symbols-outlined"> add </span>&nbsp;
+      <mix-button size="s"><span class="material-symbols-outlined"> add </span>
         {{ 'New' | transloco }}</mix-button>
     </mix-sub-toolbar>
 
