--- a/libs/share-styles/src/styles/tippy.scss
+++ b/libs/share-styles/src/styles/tippy.scss
@@ -25,6 +25,9 @@
   cursor: pointer;
   padding: 0.5rem 1rem;
   font-size: var(--text-size-s);
+  display: flex;
+  align-items: center;
+  gap: 6px;
 
   &:hover {
     background-color: var(--tui-base-02);
