feat(): update loading button

--- a/libs/mix-ui/src/button/button.component.scss
+++ b/libs/mix-ui/src/button/button.component.scss
@@ -12,7 +12,7 @@ mix-button {
     @apply text-sm;
     @apply px-3.5 py-2;
     @apply text-center whitespace-nowrap;
-    @apply inline-flex justify-center items-center space-x-2;
+    @apply inline-flex justify-center items-center;
     @apply hover:brightness-[1.15];
     @apply transition-all;
     @apply focus:outline-none;
@@ -26,14 +26,26 @@ mix-button {
 
   .btn.primary {
     @apply text-white bg-primary focus:outline-none focus:ring-primary;
+
+    .dot {
+      @apply text-white;
+    }
   }
 
   .btn.secondary {
     @apply text-gray-900 focus:outline-none bg-white border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700;
+
+    .dot {
+      @apply text-gray-900;
+    }
   }
 
   .btn.danger {
     @apply text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300;
+
+    .dot {
+      @apply text-white;
+    }
   }
 
   .btn {
