feat(): temp update 4ps

--- a/libs/mix-share/src/modules/database/components/database-inline-select/database-inline-select.component.html
+++ b/libs/mix-share/src/modules/database/components/database-inline-select/database-inline-select.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="store.vm$ | async as vm">
+<ng-container *ngIf="state() as vm">
   <div class="database-inline-select"
        [tp]="dbSelect"
        [tpOffset]="[-10, 5]"
