feat(): temp update 4ps

--- a/libs/mix-share/src/components/record-form/record-form.component.html
+++ b/libs/mix-share/src/components/record-form/record-form.component.html
@@ -25,7 +25,7 @@
       Cancel
     </mix-button>
 
-    <mix-button [loading]="loadingState() === 'Loading'"
+    <mix-button [loading]="(loadingState$ | async) === 'Loading'"
                 (click)="onSaveData()"
                 size="m">
       Save
