feat(4ps): update, fix bug

--- a/libs/mix-share/src/modules/database/database-data/database-data.component.html
+++ b/libs/mix-share/src/modules/database/database-data/database-data.component.html
@@ -20,7 +20,7 @@
              alt="No data found"
              width="150px">
 
-        <div class="mt-2 text-2xl">Please select a database, to access your wonderful data 🥰</div>
+        <div class="mt-2 text-xl text-center">Please select a database <br> To access your wonderful data 🥰</div>
       </div>
     </ng-container>
 
