feat(4ps): update, fix bug

--- a/libs/mix-share/src/modules/database/components/db-context-form/db-context-form.component.html
+++ b/libs/mix-share/src/modules/database/components/db-context-form/db-context-form.component.html
@@ -29,7 +29,9 @@
 
   <div class="mix-dialog__footer">
     <mix-button type="secondary"
-                [disabled]="loadingState() === 'Loading'">Cancel</mix-button>
+                [disabled]="loadingState() === 'Loading'"
+                (click)="dialogRef.close(false)">Cancel</mix-button>
+
     <mix-button *ngIf="loadingState() as state"
                 [disabled]="state === 'Loading'"
                 [loading]="state === 'Loading'"
