feat(4ps): update, fix bug

--- a/libs/mix-share/src/components/dynamic-db-list/dynamic-db-list.component.html
+++ b/libs/mix-share/src/components/dynamic-db-list/dynamic-db-list.component.html
@@ -46,8 +46,7 @@
           </ng-template>
 
           <ng-template editMode>
-            <mix-input-number type="number"
-                              [(value)]="data.priority"
+            <mix-input-number [(value)]="data.priority"
                               [selfControl]="true"
                               [step]="1"
                               editableOnEnter
