--- a/libs/mix-ui/src/input/input.component.html
+++ b/libs/mix-ui/src/input/input.component.html
@@ -1,4 +1,4 @@
-<input class="btn-primary"
+<input class="input-primary"
        [autocomplete]="autocomplete"
        [formControl]="control"
        [id]="id"
