--- a/libs/mix-ui/src/input/input.component.scss
+++ b/libs/mix-ui/src/input/input.component.scss
@@ -1,4 +1,4 @@
-:host {
+mix-input {
   display: block;
   width: 100%;
 }
@@ -8,7 +8,7 @@
 @tailwind utilities;
 
 @layer components {
-  .btn-primary {
+  .input-primary {
     @apply block w-full bg-gray-50 p-2.5 outline-none border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary focus:ring-1;
   }
 }
